# Red_blue_merge_demo

./: CMakeLists.txt  Dockerfile  Makefile  MyWindow.cpp  MyWindow.h  MyWindow.moc  MyWindow_files.cpp  MyWindow_operations.cpp  My_Arr_overlay_traits_2.h  My_Basic_sweep_line_2.h  My_Basic_sweep_line_2_impl.h  My_Sweep_line_2.h  My_Sweep_line_2_debug.h  My_Sweep_line_2_impl.h  My_Sweep_line_event.h  My_Sweep_line_functors.h  My_Sweep_line_handler.h  My_Sweep_line_subcurve.h  README.md  Red_blue_divide_and_conquer.h  Scout.h  arr_print.h  base_tab.cpp  base_tab.h  cgal_types.h  cmake_install.cmake  demo_tab.cpp  demo_tab.h  docker-compose.yml  docker-compose_alternative_for_mac.yml  qt_layer.cpp  qt_layer.h  x11_docker_mac.md
data/: bounded.txt  non_degenerate_100_x.txt  unbounded.txt
grid/: grid1000.txt  grid1200.txt  grid1400.txt  grid1600.txt  grid1800.txt  grid200.txt  grid2000.txt  grid2200.txt  grid2400.txt  grid400.txt  grid600.txt  grid800.txt
help/: index.html
random/: random1000.txt  random1200.txt  random1400.txt  random1600.txt  random1800.txt  random200.txt  random2000.txt  random2200.txt  random2400.txt  random2600.txt  random2800.txt  random3000.txt  random3200.txt  random3400.txt  random400.txt  random600.txt  random800.txt
